@@ -728,6 +728,9 @@ years_to_double_building_culture = 1000
 ; effectively a scaling factor on the tourism time thresholds. For standard rules, set to 100.
 tourism_time_scale_percent = 100
 
+; One the first turn of a hotseat game, all human players will be given diplomatic contact with each other.
+introduce_all_human_players_at_start_of_hotseat_game = false
+
 [=======================]
 [=== DAY/NIGHT CYCLE ===]
 [=======================]
