@@ -6,6 +6,8 @@
 - Option to prevent units from upgrading past an intermediate type that does not have the upgrade ability
   - Setting named prevent_old_units_from_upgrading_past_ability_block
 - Can adjust times to generate tourism gold, setting named tourism_time_scale_percent
+- Option to put all human players in contact with each other at the start of a hotseat game
+  - Setting named introduce_all_human_players_at_start_of_hotseat_game
 - Option to show some popup messages as online-multiplayer-style notifications
   - Setting named convert_some_popups_into_online_mp_messages, off by default, see config for which popups are affected
 - Option to switch debug mode on or off for games in progress
